Retrieve basic devices information